# otdb-rs

./: Cargo.toml  README.md
examples/basic_usage/: Cargo.toml
examples/basic_usage/src/: main.rs
examples/blocking_usage/: Cargo.toml
examples/blocking_usage/src/: main.rs
src/: blocking.rs  client.rs  endpoints.rs  error.rs  lib.rs  model.rs  options.rs  request.rs  tests.rs
