[package]
name = "otdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.20.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2"
