[package]
name = "otdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = []

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
