[package]
name = "otdb"
version = "1.0.0"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2021"
description = "An open trivia database API wrapper"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlvaroMS25/otdb-rs"
categories = ["asynchronous", "api-bindings"]
keywords = ["otdb", "open-trivia-database", "trivia"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
blocking = []

[dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
